	- argv: permit argvSplit() default whitespace separators.
	- argv: use xmalloc, not alloca, in argvSplit().
	- rpmevr: refactor logical operator parsing, hide implementation.
	- rpmevr: add RPMSENSE_NOTEQUAL and wire up the condition tests.
	- rpmns: negative existence tests as Requires: !foo, take 1.
	- rpmal: avoid rpmns allocates while iterating added provides.

4.4.7 -> 4.4.8:
	- start rpm-4.4.8 development.
	- remove files that are ancient and historical.
	- start simplifying rpm.spec.in.
	- move rpmfc.[ch] from -lrpmbuild to -lrpmlib.
	- solaris: various non-gcc fixes.
	- fix: detecting repackaged assumed sizeof(void *) == sizeof(int_32).
	- run old->triggerpostun case when erasing (#210626).
	- fix: invert platform initialize order.
	- fix: flush query format buffer before listing files (#212833).
	- don't add rpmlib(FileDigestParameterized) dependency if MD5.
	- resize rpmExpand() buffer instead of using BUFSIZ.
	- remove extraneous :depflags white space in non-versioned dependencies.
	- add parameters from db-4.5.20.
	- permit multiple identically named packages with --install (#171970).
	- query: don't attempt manifest open on non-existent files (#215712).
	- ignore Fopen and fopen(3) extensions if not glibc-2.3.3 or later.
	- attempt mmap'd Fopen's for hdlist queries.
	- add %_query_hdlist_path for rpm -qH.
	- fix: refactor depflags options, re-add to query/verify modes.
	- fix: illegal accesses seen when expanding into a 1 byte buffer.
	- re-add symbols removed in rpm-4.4.7 for now.
	- add symclash.sh/symclash.py.
	- fix: classification by suffix broken by cut-n-paste.
	- fix: assume "." if getcwd returns NULL when building.
	- don't fail if/when unsetting non-existent envvars in scriptlets.
	- add ~/etc/.rpmmacros to rpmrc macrofiles: configgery.
	- add /usr/src/examples and %{_examplesdir} to docdirs.
	- add php classification (phpdeps.sh is still missing).
	- FreeBSD portability fiddles.
	- don't read .rpmnew/.rpmorig/.rpmsave or *~ macro files.