@@ -73,6 +73,7 @@
 	- rpmevr: add RPMSENSE_NOTEQUAL and wire up the condition tests.
 	- rpmns: negative existence tests as Requires: !foo, take 1.
 	- rpmal: avoid rpmns allocates while iterating added provides.
+	- rpmns: finalize '!' as a dependency assertion negation operator.
 
 4.4.7 -> 4.4.8:
 	- start rpm-4.4.8 development.
